Updated Temp name

--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -65,7 +65,7 @@
           <td id='hdl'></td>
         </tr>
         <tr>
-          <th>HDL:</th>
+          <th>TEMP:</th>
           <td id='temp'></td>
         </tr>
       </table>
