--- a/example-smart-app/launch.html
+++ b/example-smart-app/launch.html
@@ -28,7 +28,7 @@
     <script>
       FHIR.oauth2.authorize({
         'client_id': '96315a75-0f62-463b-9443-f3201a3c681e',
-        'scope':  'patient/Patient.read patient/Observation.read launch online_access openid profile'
+        'scope':  'patient/Patient.read patient/Observation.read patient/AllergyIntolerance.read launch online_access openid profile'
       });
     </script>
     <div class="spinner">
