--- a/example-smart-app/index.html
+++ b/example-smart-app/index.html
@@ -68,6 +68,10 @@
           <th>TEMP:</th>
           <td id='temp'></td>
         </tr>
+        <tr>
+          <th>allergy:</th>
+          <td id='allergy'></td>
+        </tr>
       </table>
     </div>
     <!-- Required JS files to enable this page to embed within an MPage -->
